# QwenEcho

./: .gitignore  README.md  pubspec.yaml
.kiro/specs/qwen-echo/: .config.kiro  design.md  requirements.md  tasks.md  tasks.meta.json
.qoder/repowiki/en/content/: Build System and Deployment.md  Getting Started.md  Security and Privacy.md  Testing Strategy.md
.qoder/repowiki/en/content/AI Model Processing Stages/: AI Model Processing Stages.md  ASR Stage - Speech Recognition.md  LLM Stage - Language Translation.md  Stage Communication and Data Flow.md  TTS Stage - Text-to-Speech Synthesis.md
.qoder/repowiki/en/content/API Reference/: API Reference.md  C FFI API.md  Dart Facade API.md  Message Protocol.md
.qoder/repowiki/en/content/Architecture Overview/: Architecture Overview.md
.qoder/repowiki/en/content/Audio Processing Pipeline/: Audio Collection and Capture.md  Audio Processing Pipeline.md  Bounded SPSC Queues.md  Lock-free Ring Buffer.md  Sentence Segmentation and Voice Activity Detection.md
.qoder/repowiki/en/content/FFI Bridge and Dart Integration/: C FFI Interface Specification.md  Dart FFI Bindings Implementation.md  EchoEngine High-Level Facade.md  FFI Bridge and Dart Integration.md  Native Port Manager.md  Typed Message Protocol.md
.qoder/repowiki/en/content/Flutter UI Layer/: Flutter UI Layer.md  Speaker Half Component.md  Split View Architecture.md  Status Monitoring.md  Text Display System.md  Warning Overlay System.md
.qoder/repowiki/en/content/Model Management System/: Context Management.md  GGUF Model Format.md  Model Catalog and Repository.md  Model Loader Core.md  Model Management System.md
.qoder/repowiki/en/content/Native Engine Core/: Echo Types System.md  Engine Manager.md  Native Engine Core.md  Native Port System.md
.qoder/repowiki/en/content/Performance Management Systems/: Latency Tracking System.md  Memory Management System.md  Offline Policy System.md  Performance Management Systems.md  Thermal Management System.md
.qoder/repowiki/en/content/Platform Abstraction Layer (HAL)/: Accelerator HAL Implementation.md  HAL Architecture Design.md  Memory HAL Implementation.md  Platform Abstraction Layer (HAL).md  Thermal HAL Implementation.md  Thread HAL Implementation.md
.qoder/repowiki/en/meta/: repowiki-metadata.json
.qoder/repowiki/knowledge/en/: _index.yaml
.qoder/repowiki/knowledge/en/Ad-hoc Platform-Specific Logging (No Centralized System)/: Ad-hoc Platform-Specific Logging (No Centralized System).md
ios/: Podfile
ios/Runner/: AppDelegate.swift  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
ios/Runner/SwiftEngine/: AsrStage.swift  AudioCapture.swift  EchoMessage.swift  EnginePlugin.swift  LlmStage.swift  MessageStream.swift  PipelineController.swift  ThermalMonitor.swift  VoiceActivityDetector.swift
ios/sherpa_onnx_local/: prepare.sh
lib/: main.dart  qwen_echo.dart
lib/src/: echo_engine.dart  messages.dart  native_bridge.dart  port_manager.dart
lib/src/llm/: llm_service.dart
lib/src/model/: model_catalog.dart  model_repository.dart
lib/src/ui/: line_buffer.dart  model_config_screen.dart  speaker_half.dart  split_view.dart  status_bar.dart  text_display.dart  warning_overlay.dart
native/: CMakeLists.txt  qwen_echo_engine.podspec
native/hal/: hal_accelerator.h  hal_audio.h  hal_memory.h  hal_thermal.h  hal_thread.h
native/hal/android/: hal_accelerator_android.c  hal_audio_android.c  hal_memory_android.c  hal_thermal_android.c  hal_thread_android.c
native/hal/ios/: hal_accelerator_ios.m  hal_audio_ios.m  hal_memory_ios.c  hal_thermal_ios.m  hal_thread_ios.c
native/include/: asr_stage.h  audio_collector.h  audio_ring_buffer.h  bounded_spsc_queue.h  echo_types.h  engine_manager.h  ffi_bridge.h  gguf_inference.h  latency_tracker.h  llm_stage.h  memory_monitor.h  model_loader.h  native_port.h  offline_policy.h  pipeline_controller.h  sentence_segmenter.h  thermal_monitor.h  tts_stage.h
native/src/: asr_stage.cpp  audio_collector.cpp  engine.cpp  engine_manager.cpp  ffi_bridge.cpp  gguf_inference.cpp  latency_tracker.cpp  llm_stage.cpp  memory_monitor.cpp  model_loader.cpp  native_port.cpp  offline_policy.cpp  pipeline_controller.cpp  sentence_segmenter.cpp  thermal_monitor.cpp  tts_stage.cpp
native/tests/: test_asr_stage.cpp  test_audio_collector.cpp  test_echo_types.cpp  test_engine_manager.cpp  test_model_loader.cpp  test_native_port.cpp  test_sentence_segmenter.cpp
test/: messages_test.dart  split_view_test.dart  widget_test.dart
test/ui/: line_buffer_test.dart  status_bar_test.dart  text_display_test.dart  warning_overlay_test.dart
(+161 files in other folders)
